AntlrCSharp/obj/Debug/net7.0/CSharpParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\dwini\Desktop\Test2\AntlrCSharp\CSharp.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace AntlrCSharp {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class CSharpParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, IDENTIFIER=30, LITERAL=31, 
		WS=32;
	public const int
		RULE_compilationUnit = 0, RULE_usingDirective = 1, RULE_globalAttribute = 2, 
		RULE_namespaceDeclaration = 3, RULE_typeDeclaration = 4, RULE_classDeclaration = 5, 
		RULE_interfaceDeclaration = 6, RULE_structDeclaration = 7, RULE_enumDeclaration = 8, 
		RULE_baseList = 9, RULE_classBody = 10, RULE_interfaceBody = 11, RULE_structBody = 12, 
		RULE_enumBody = 13, RULE_classMemberDeclaration = 14, RULE_interfaceMemberDeclaration = 15, 
		RULE_structMemberDeclaration = 16, RULE_methodDeclaration = 17, RULE_modifiers = 18, 
		RULE_fieldDeclaration = 19, RULE_enumMember = 20, RULE_returnType = 21, 
		RULE_type = 22, RULE_qualifiedIdentifier = 23, RULE_typeParameterList = 24, 
		RULE_parameterList = 25, RULE_parameter = 26, RULE_block = 27, RULE_statement = 28, 
		RULE_localVariableDeclaration = 29, RULE_expressionStatement = 30, RULE_returnStatement = 31, 
		RULE_expression = 32, RULE_assignmentExpression = 33, RULE_additiveExpression = 34, 
		RULE_multiplicativeExpression = 35, RULE_primaryExpression = 36, RULE_attributeList = 37, 
		RULE_attribute = 38, RULE_attributeArgumentList = 39, RULE_attributeArgument = 40;
	public static readonly string[] ruleNames = {
		"compilationUnit", "usingDirective", "globalAttribute", "namespaceDeclaration", 
		"typeDeclaration", "classDeclaration", "interfaceDeclaration", "structDeclaration", 
		"enumDeclaration", "baseList", "classBody", "interfaceBody", "structBody", 
		"enumBody", "classMemberDeclaration", "interfaceMemberDeclaration", "structMemberDeclaration", 
		"methodDeclaration", "modifiers", "fieldDeclaration", "enumMember", "returnType", 
		"type", "qualifiedIdentifier", "typeParameterList", "parameterList", "parameter", 
		"block", "statement", "localVariableDeclaration", "expressionStatement", 
		"returnStatement", "expression", "assignmentExpression", "additiveExpression", 
		"multiplicativeExpression", "primaryExpression", "attributeList", "attribute", 
		"attributeArgumentList", "attributeArgument"
	};

	private static readonly string[] _LiteralNames = {
		null, "'using'", "'.'", "';'", "'static'", "'['", "'assembly'", "':'", 
		"']'", "'namespace'", "'{'", "'}'", "'partial'", "'class'", "'<'", "'>'", 
		"'base'", "'interface'", "'struct'", "'enum'", "','", "'('", "')'", "'='", 
		"'void'", "'return'", "'+'", "'-'", "'*'", "'/'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, "IDENTIFIER", "LITERAL", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CSharp.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public CSharpParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompilationUnitContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(CSharpParser.Eof, 0); }
		public UsingDirectiveContext[] usingDirective() {
			return GetRuleContexts<UsingDirectiveContext>();
		}
		public UsingDirectiveContext usingDirective(int i) {
			return GetRuleContext<UsingDirectiveContext>(i);
		}
		public GlobalAttributeContext[] globalAttribute() {
			return GetRuleContexts<GlobalAttributeContext>();
		}
		public GlobalAttributeContext globalAttribute(int i) {
			return GetRuleContext<GlobalAttributeContext>(i);
		}
		public NamespaceDeclarationContext[] namespaceDeclaration() {
			return GetRuleContexts<NamespaceDeclarationContext>();
		}
		public NamespaceDeclarationContext namespaceDeclaration(int i) {
			return GetRuleContext<NamespaceDeclarationContext>(i);
		}
		public TypeDeclarationContext[] typeDeclaration() {
			return GetRuleContexts<TypeDeclarationContext>();
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return GetRuleContext<TypeDeclarationContext>(i);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilationUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.EnterCompilationUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.ExitCompilationUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICSharpVisitor<TResult> typedVisitor = visitor as ICSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompilationUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompilationUnitContext compilationUnit() {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__4) | (1L << T__8) | (1L << T__11) | (1L << T__12) | (1L << T__16) | (1L << T__17) | (1L << T__18))) != 0)) {
				{
				State = 86;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case T__0:
					{
					State = 82; usingDirective();
					}
					break;
				case T__4:
					{
					State = 83; globalAttribute();
					}
					break;
				case T__8:
					{
					State = 84; namespaceDeclaration();
					}
					break;
				case T__11:
				case T__12:
				case T__16:
				case T__17:
				case T__18:
					{
					State = 85; typeDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 90;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 91; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UsingDirectiveContext : ParserRuleContext {
		public ITerminalNode[] IDENTIFIER() { return GetTokens(CSharpParser.IDENTIFIER); }
		public ITerminalNode IDENTIFIER(int i) {
			return GetToken(CSharpParser.IDENTIFIER, i);
		}
		public UsingDirectiveContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_usingDirective; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.EnterUsingDirective(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.ExitUsingDirective(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICSharpVisitor<TResult> typedVisitor = visitor as ICSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUsingDirective(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UsingDirectiveContext usingDirective() {
		UsingDirectiveContext _localctx = new UsingDirectiveContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_usingDirective);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93; Match(T__0);
			State = 113;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case IDENTIFIER:
				{
				State = 94; Match(IDENTIFIER);
				State = 99;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==T__1) {
					{
					{
					State = 95; Match(T__1);
					State = 96; Match(IDENTIFIER);
					}
					}
					State = 101;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 102; Match(T__2);
				}
				break;
			case T__3:
				{
				State = 103; Match(T__3);
				State = 104; Match(IDENTIFIER);
				State = 109;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==T__1) {
					{
					{
					State = 105; Match(T__1);
					State = 106; Match(IDENTIFIER);
					}
					}
					State = 111;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 112; Match(T__2);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class GlobalAttributeContext : ParserRuleContext {
		public AttributeListContext attributeList() {
			return GetRuleContext<AttributeListContext>(0);
		}
		public GlobalAttributeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_globalAttribute; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.EnterGlobalAttribute(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.ExitGlobalAttribute(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICSharpVisitor<TResult> typedVisitor = visitor as ICSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitGlobalAttribute(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public GlobalAttributeContext globalAttribute() {
		GlobalAttributeContext _localctx = new GlobalAttributeContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_globalAttribute);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 115; Match(T__4);
			State = 116; Match(T__5);
			State = 117; Match(T__6);
			State = 118; attributeList();
			State = 119; Match(T__7);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NamespaceDeclarationContext : ParserRuleContext {
		public QualifiedIdentifierContext qualifiedIdentifier() {
			return GetRuleContext<QualifiedIdentifierContext>(0);
		}
		public UsingDirectiveContext[] usingDirective() {
			return GetRuleContexts<UsingDirectiveContext>();
		}
		public UsingDirectiveContext usingDirective(int i) {
			return GetRuleContext<UsingDirectiveContext>(i);
		}
		public TypeDeclarationContext[] typeDeclaration() {
			return GetRuleContexts<TypeDeclarationContext>();
		}
		public TypeDeclarationContext typeDeclaration(int i) {
			return GetRuleContext<TypeDeclarationContext>(i);
		}
		public NamespaceDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_namespaceDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.EnterNamespaceDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.ExitNamespaceDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICSharpVisitor<TResult> typedVisitor = visitor as ICSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNamespaceDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NamespaceDeclarationContext namespaceDeclaration() {
		NamespaceDeclarationContext _localctx = new NamespaceDeclarationContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_namespaceDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 121; Match(T__8);
			State = 122; qualifiedIdentifier();
			State = 123; Match(T__9);
			State = 128;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__11) | (1L << T__12) | (1L << T__16) | (1L << T__17) | (1L << T__18))) != 0)) {
				{
				State = 126;
				_errHandler.Sync(this);
				switch (_input.La(1)) {
				case T__0:
					{
					State = 124; usingDirective();
					}
					break;
				case T__11:
				case T__12:
				case T__16:
				case T__17:
				case T__18:
					{
					State = 125; typeDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 130;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 131; Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TypeDeclarationContext : ParserRuleContext {
		public ClassDeclarationContext classDeclaration() {
			return GetRuleContext<ClassDeclarationContext>(0);
		}
		public InterfaceDeclarationContext interfaceDeclaration() {
			return GetRuleContext<InterfaceDeclarationContext>(0);
		}
		public StructDeclarationContext structDeclaration() {
			return GetRuleContext<StructDeclarationContext>(0);
		}
		public EnumDeclarationContext enumDeclaration() {
			return GetRuleContext<EnumDeclarationContext>(0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_typeDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.EnterTypeDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.ExitTypeDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICSharpVisitor<TResult> typedVisitor = visitor as ICSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTypeDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TypeDeclarationContext typeDeclaration() {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_typeDeclaration);
		try {
			State = 137;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case T__11:
			case T__12:
				EnterOuterAlt(_localctx, 1);
				{
				State = 133; classDeclaration();
				}
				break;
			case T__16:
				EnterOuterAlt(_localctx, 2);
				{
				State = 134; interfaceDeclaration();
				}
				break;
			case T__17:
				EnterOuterAlt(_localctx, 3);
				{
				State = 135; structDeclaration();
				}
				break;
			case T__18:
				EnterOuterAlt(_localctx, 4);
				{
				State = 136; enumDeclaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ClassDeclarationContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(CSharpParser.IDENTIFIER, 0); }
		public ClassBodyContext classBody() {
			return GetRuleContext<ClassBodyContext>(0);
		}
		public TypeParameterListContext typeParameterList() {
			return GetRuleContext<TypeParameterListContext>(0);
		}
		public BaseListContext baseList() {
			return GetRuleContext<BaseListContext>(0);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_classDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.EnterClassDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.ExitClassDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICSharpVisitor<TResult> typedVisitor = visitor as ICSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitClassDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ClassDeclarationContext classDeclaration() {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_classDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 140;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__11) {
				{
				State = 139; Match(T__11);
				}
			}

			State = 142; Match(T__12);
			State = 143; Match(IDENTIFIER);
			State = 148;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__13) {
				{
				State = 144; Match(T__13);
				State = 145; typeParameterList();
				State = 146; Match(T__14);
				}
			}

			State = 152;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__15) {
				{
				State = 150; Match(T__15);
				State = 151; baseList();
				}
			}

			State = 154; Match(T__9);
			State = 155; classBody();
			State = 156; Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class InterfaceDeclarationContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(CSharpParser.IDENTIFIER, 0); }
		public InterfaceBodyContext interfaceBody() {
			return GetRuleContext<InterfaceBodyContext>(0);
		}
		public TypeParameterListContext typeParameterList() {
			return GetRuleContext<TypeParameterListContext>(0);
		}
		public BaseListContext baseList() {
			return GetRuleContext<BaseListContext>(0);
		}
		public InterfaceDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_interfaceDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.EnterInterfaceDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.ExitInterfaceDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICSharpVisitor<TResult> typedVisitor = visitor as ICSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitInterfaceDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public InterfaceDeclarationContext interfaceDeclaration() {
		InterfaceDeclarationContext _localctx = new InterfaceDeclarationContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_interfaceDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 158; Match(T__16);
			State = 159; Match(IDENTIFIER);
			State = 164;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__13) {
				{
				State = 160; Match(T__13);
				State = 161; typeParameterList();
				State = 162; Match(T__14);
				}
			}

			State = 168;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__15) {
				{
				State = 166; Match(T__15);
				State = 167; baseList();
				}
			}

			State = 170; Match(T__9);
			State = 171; interfaceBody();
			State = 172; Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StructDeclarationContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(CSharpParser.IDENTIFIER, 0); }
		public StructBodyContext structBody() {
			return GetRuleContext<StructBodyContext>(0);
		}
		public TypeParameterListContext typeParameterList() {
			return GetRuleContext<TypeParameterListContext>(0);
		}
		public BaseListContext baseList() {
			return GetRuleContext<BaseListContext>(0);
		}
		public StructDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_structDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.EnterStructDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.ExitStructDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICSharpVisitor<TResult> typedVisitor = visitor as ICSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStructDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StructDeclarationContext structDeclaration() {
		StructDeclarationContext _localctx = new StructDeclarationContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_structDeclaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 174; Match(T__17);
			State = 175; Match(IDENTIFIER);
			State = 180;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__13) {
				{
				State = 176; Match(T__13);
				State = 177; typeParameterList();
				State = 178; Match(T__14);
				}
			}

			State = 184;
			_errHandler.Sync(this);
			_la = _input.La(1);
			if (_la==T__15) {
				{
				State = 182; Match(T__15);
				State = 183; baseList();
				}
			}

			State = 186; Match(T__9);
			State = 187; structBody();
			State = 188; Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnumDeclarationContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(CSharpParser.IDENTIFIER, 0); }
		public EnumBodyContext enumBody() {
			return GetRuleContext<EnumBodyContext>(0);
		}
		public EnumDeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_enumDeclaration; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.EnterEnumDeclaration(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.ExitEnumDeclaration(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICSharpVisitor<TResult> typedVisitor = visitor as ICSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnumDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EnumDeclarationContext enumDeclaration() {
		EnumDeclarationContext _localctx = new EnumDeclarationContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_enumDeclaration);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 190; Match(T__18);
			State = 191; Match(IDENTIFIER);
			State = 192; Match(T__9);
			State = 193; enumBody();
			State = 194; Match(T__10);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BaseListContext : ParserRuleContext {
		public TypeContext[] type() {
			return GetRuleContexts<TypeContext>();
		}
		public TypeContext type(int i) {
			return GetRuleContext<TypeContext>(i);
		}
		public BaseListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_baseList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.EnterBaseList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICSharpListener typedListener = listener as ICSharpListener;
			if (typedListener != null) typedListener.ExitBaseList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			ICSharpVisitor<TResult> typedVisitor = visitor as ICSharpVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBaseList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BaseListContext baseList() {
		BaseListContext _localctx = new BaseListContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_baseList);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 196; Match(T__6);
			State = 197; type();
			State = 202;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==T__19) {
				{
				{
				State = 198; Match(T__19);
				State = 199; type();
				}
				}
				State = 204;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
